French toggle fix mobile (#205)
* Fixed pause button in home banner overlaying on the mobile menu

* Added language toggle back in on the mobile menu. Fixed the menu icon going off-screen on mobile. Matched the styling between home and other nav styling

* Trying to fix circleci errors - changed class to 'mobile-lang'

--- a/_sass/cds/_layout.scss
+++ b/_sass/cds/_layout.scss
@@ -81,7 +81,8 @@
 ////////////////////////////////////////////////////////////
 
 #wb-sm {
-  background: none;
+  	background: none;
+	position: relative;	
 }
 
 .page-banner {
